# ximea_camera

./: CMakeLists.txt
config/: ximeaRight.yaml
include/ximea_camera/: ximea_driver.h
launch/: ximea_cameras.launch
src/: ximea_driver.cpp
statistics_msgs/: CMakeLists.txt  package.xml
statistics_msgs/msg/: Stats1D.msg
wfov_camera_msgs/msg/: WFOVImage.msg
ximea_camera/: CMakeLists.txt  nodelet_plugins.xml  package.xml
ximea_camera/cfg/: camera.cfg
ximea_camera/config/: 31703351.yaml  32703551.yaml  left_camera.yaml  right_camera.yaml  ximeaLeft.yaml  ximeaRight.yaml
ximea_camera/include/ximea_camera/: stereo_nodelet.h  ximea_driver.h  ximea_nodelet2.h  ximea_ros_driver.h
ximea_camera/launch/: camera.launch  camera2.launch  cameras.launch  robot.launch  rtabmap.launch  rtabmap_full.launch  rtabmap_new.launch  stereo.launch  stereo_calibrator.sh  stereo_nodelet.launch  ximea_camera.launch
ximea_camera/src/: stereo_nodelet.cpp  ximea_driver.cpp  ximea_nodelet.cpp  ximea_nodelet2.cpp  ximea_ros_driver.cpp
ximea_camera/src/camera_trigger/: camera_trigger.ino
